Fixed overflow of Project Cards

--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,11 @@ header {
     background: #1F2933;
   }
 
+  #nav {
+    position: relative;
+    z-index: 99 !important;
+  }
+
   .hero, .introduction {
     flex-direction: column;
     flex-wrap: wrap;
@@ -171,6 +176,7 @@ header {
   .social-media-icon {
     width: 20px;
     height: 20px;
+    margin-inline-end: 1em;
   }
 
   .about-me {
@@ -183,17 +189,15 @@ header {
   }
 
   .tech-stack1 {
-    margin-block-start: 4em;
+    margin-block-start: 4em !important;
   }
 
   .sq-stack {
-    width: 125px;
-    height: 125px;
+    height: 170px !important;
   }
 
   .sq-stack2 {
-    width: 75px;
-    height: 75px;
+    height: 125px !important;
   }
 
   .sq-stack-icon {
@@ -209,6 +213,10 @@ header {
   .tech-stack-icon {
     width: 30px;
     height: 30px;
+  }
+
+  .card {
+    position: inherit !important;
   }
 
   .project-stack {
